--- a/html/toko-online.html
+++ b/html/toko-online.html
@@ -15,13 +15,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
-<body class="bg-gray-100 flex flex-col min-h-screen font-inter">
+<!-- Menambahkan overflow-x-hidden pada body untuk mencegah horizontal scrolling -->
+
+<body class="bg-gray-100 flex flex-col min-h-screen font-inter overflow-x-hidden">
     <!-- Header Utama (Mirip dengan Tokopedia) -->
-    <header class="bg-white shadow-md py-3 px-4 md:px-8 lg:px-16">
-        <!-- Container utama header: flex-wrap agar elemen bisa pindah baris di layar kecil -->
-        <div class="container mx-auto flex flex-wrap items-center justify-between">
-            <!-- Baris pertama di mobile: Tombol Kembali + Logo + Tombol Auth/Ikon (mobile & desktop) -->
-            <!-- flex-grow pada search bar akan mendorong auth-buttons ke kanan di desktop -->
+    <!-- Memastikan header mengambil lebar penuh -->
+    <header class="bg-white shadow-md py-3 px-4 md:px-8 lg:px-16 w-full">
+        <!-- Container utama header: akan menjadi kolom di layar kecil (flex-col) dan baris di layar menengah ke atas (md:flex-row) -->
+        <div class="container mx-auto flex flex-col md:flex-row items-center md:justify-between gap-y-3 md:gap-y-0">
+            <!-- Bagian atas (kiri di desktop): Tombol Kembali, Logo, dan Tombol Auth/Ikon untuk Mobile -->
+            <!-- flex-wrap agar elemen bisa pindah baris jika tidak cukup ruang -->
             <div class="flex items-center justify-between w-full md:w-auto md:flex-grow-0 flex-shrink-0">
                 <!-- Tombol Kembali ke Proyek -->
                 <a href="javascript:history.back()" class="flex items-center text-gray-600 hover:text-green-600 font-semibold
@@ -35,18 +38,15 @@
                 </a>
 
                 <!-- Logo "Toko Online" dengan gaya mirip Tokopedia (link dimatikan) -->
-                <!-- flex-grow agar mengambil ruang di antara tombol kembali dan auth-buttons di mobile -->
                 <a href="javascript:void(0)"
                     class="text-green-500 font-bold text-xl sm:text-2xl rounded-md flex-shrink-0 logo mx-auto md:mx-0">
                     <span class="bg-green-500 text-white px-2 py-1 rounded-l-md">Toko</span><span
                         class="text-green-500 bg-white border border-green-500 px-2 py-1 rounded-r-md">Online</span>
                 </a>
 
-                <!-- Ikon Navigasi (Keranjang, Notifikasi) dan Kontainer Tombol Auth/Profil -->
-                <!-- flex-shrink-0 agar tidak menyusut -->
-                <div id="auth-buttons-container"
-                    class="flex items-center space-x-2 sm:space-x-4 flex-shrink-0 nav-icons-auth-container"
-                    style="opacity: 0; transition: opacity 0.3s ease;">
+                <!-- Ikon Navigasi (Keranjang, Notifikasi) dan Kontainer Tombol Auth/Profil (Unified for simplicity) -->
+                <!-- Menghapus style="opacity: 0; display: none;" dari HTML agar JavaScript yang menanganinya -->
+                <div id="auth-buttons-container" class="flex items-center space-x-2 sm:space-x-4 flex-shrink-0">
                     <a href="#" class="text-gray-600 hover:text-green-600 relative nav-icon">
                         <!-- Ikon keranjang belanja -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
@@ -88,8 +88,8 @@
 
             <!-- Search Bar yang responsif -->
             <!-- Akan mengambil lebar penuh di mobile (w-full), dan flex-grow di desktop (md:flex-grow) -->
-            <!-- Tambahkan mt-3 untuk jarak di mobile, md:mt-0 untuk mereset di desktop -->
-            <div class="w-full relative mt-3 md:mt-0 md:flex-grow md:max-w-xl md:mx-4 search-bar-container">
+            <!-- Menghapus max-w-xl dari desktop agar search bar bisa lebih lebar -->
+            <div class="w-full relative mt-3 md:mt-0 md:flex-grow md:mx-4 search-bar-container">
                 <input type="text" placeholder="Cari di Toko Online..."
                     class="w-full pl-4 pr-10 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-400">
                 <button class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500">
@@ -105,7 +105,8 @@
     </header>
 
     <!-- Konten Utama (Area untuk daftar produk, dll.) -->
-    <main class="container mx-auto p-6 md:p-8 lg:p-10 flex-grow">
+    <!-- Memastikan main mengambil lebar penuh -->
+    <main class="container mx-auto p-6 md:p-8 lg:p-10 flex-grow w-full">
         <h1 class="text-3xl font-semibold text-gray-800 mb-6">Selamat Datang di Toko Online!</h1>
         <p class="text-gray-600 mb-8">
             Di sini akan tampil berbagai kategori produk, promo menarik, dan daftar produk unggulan.
@@ -136,7 +137,8 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-6 mt-auto">
+    <!-- Memastikan footer mengambil lebar penuh -->
+    <footer class="bg-gray-800 text-white py-6 mt-auto w-full">
         <div class="container mx-auto text-center text-sm">
             <p>&copy; 2024 Ahmad Tajudin. Hak Cipta Dilindungi Undang-Undang.</p>
             <div class="flex justify-center space-x-4 mt-2">
